Fix killer doubling as an assistant