@@ -27,6 +27,7 @@
                         --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.config=ALL-UNNAMED
                         --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.handler=ALL-UNNAMED
                         --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.handler.vault=ALL-UNNAMED
+                        --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.listeners=ALL-UNNAMED
                         --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.misc=ALL-UNNAMED
                         --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp=ALL-UNNAMED</argLine>
                 </configuration>
